Alignment of ML live title and icon on homepage list view fixed.

--- a/assets/scss/article-list.scss
+++ b/assets/scss/article-list.scss
@@ -44,11 +44,13 @@
 		.alphaville-card__live-title {
 			@include marketslive-live-title();
 			text-transform: uppercase;
+			font-size: 16px;
+			line-height: 18px;
 		}
 
 		.alphaville-card__live-notification-icon {
-			@include marketslive-lozenge-icon(13);
-			margin-bottom: -2px;
+			@include marketslive-lozenge-icon(16);
+			margin-bottom: -3px;
 		}
 	}
 
